--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  /* colors */
+  --main-text: #c3cad9;
+  --secondary-text: #9ba2b1;
+  --accent-text: #343d4e;
+
+  --main-background: #f7f8fa;
+  --main-divider: #edeff2;
+
+  --status-success: #2dc157;
+  --status-alert: #c12d2d;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif !important;
+  background-color: var(--main-background) !important;
+}
+
+main {
+  margin-left: 65px;
+  padding: 2rem;
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (max-width: 1199.98px) {
+}
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 991.98px) {
+}
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 767.98px) {
+}
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
 }
